<resources>
    <string name="app_name">Booya</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>

    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_log_out">Log Out</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to menu-->
    <string name="profile">Profile</string>
    <string name="createNewPost">Create New Post</string>
    <string name="refresh_list">Refresh</string>
    <string name="logout">Log Out</string>


    <!-- Strings related to Create Post Activity-->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="createPost">Create Post</string>


</resources>
